# gemini-agent

./: .env.sample  .gitignore  README.md  llm_main.py  main.py  pyproject.toml  test.py
app/: conftest.py  main.py  main2.py  models.py  schemas.py  test.py  utils.py
app/db/: __init__.py
app/router/: auth.py
functions/: get_files_info.py  llm_tools.py  utils.py
